# pycliarr

./: .gitignore  .readthedocs.yml  README.md  codecov_update.sh  fix_pr_35.patch  pixi.toml  release.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  python-build.yml  python-publish.yml
docs/: requirements.txt
docs/coverage/: _tox_codecov_lib_python3_8_site-packages_pycliarr___init___py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api___init___py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api_base_api_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api_base_media_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api_exceptions_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api_radarr_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_api_sonarr_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_cli___init___py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_cli_cli_cmd_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_cli_cli_py.html  _tox_codecov_lib_python3_8_site-packages_pycliarr_cli_utils_py.html  _tox_doc_lib_python3_8_site-packages_pycliarr___init___py.html  _tox_doc_lib_python3_8_site-packages_pycliarr_api___init___py.html  _tox_doc_lib_python3_8_site-packages_pycliarr_api_base_api_py.html  _tox_doc_lib_python3_8_site-packages_pycliarr_api_base_media_py.html  _tox_doc_lib_python3_8_site-packages_pycliarr_api_base_py.html  _tox_doc_lib_python3_8_site-packages_pycliarr_api_exceptions_py.html  coverage.xml  index.html  status.json  (+18 more)
test/: movie_item.json
(+83 files in other folders)
