[aliases]
test=tox
doc=build_sphinx

[metadata]
name = pycliarr
author = Vivien Chene
author_email = viv@vivc.org
description = Python client for radarr and sonarr
version = attr: pycliarr.__init__.__version__
url = https://github.com/vche/pycliarr
keywords =
  python tool
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Development Status :: 5 - Production/Stable
  # Intended Audience :: Science/Research
  Topic :: Home Automation
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE

[options]
python_requires = >= 3.6
# packages =
#     find:
zip_safe = False
install_requires =
  requests
  m2r
#  numpy

# Add additional non python data files
# [options.package_data]
#   * = *.txt, *.rst  # All projects
#   hello = *.msg     # hello project

[options.entry_points]
console_scripts =
  pycliarr = pycliarr.cli.cli:main
# gui_scripts =
#   baz = my_package_gui:start_func

[tool:pytest]
testpaths=test

[build_sphinx]
source-dir = docs/sphinx_conf
build-dir = docs/doc
